--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 h1{
     color: var(--on-background);
@@ -51,6 +52,19 @@ h2{
     font-size: 32px;
     text-align: center;
     color: var(--on-background-alt);
+    margin: 20px;
+}
+h3{
+    font-size: 32px;
+    text-align: center;
+    color: var(--on-background-alt);
+    margin: 10px;
+}
+.title-2{
+    color: var(--on-background);
+    font-size: 60px;
+    font-family: 'Kaushan Script', sans-serif;
+    text-align: center;
 }
 nav{
     position: fixed;
@@ -77,4 +91,82 @@ nav ul li a:hover,
 nav ul li a:focus {
     color: var(--on-background);
     border-bottom: 3px solid;
+}
+.section-home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-container {
+    border: 1px solid var(--secondary-color);
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin-right: 25px;
+    width: auto;
+    background: var(--background);
+    box-shadow: var(--box-shadow);
+}
+img {
+    height: 300px;
+    width: 300px;
+}
+.buttons {
+    margin-top: 15px;
+    margin-bottom: 50px;
+}
+button {
+    width: 100px;
+    height: 40px;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-right: 10px;
+    border: 2px solid var(--primary-color);
+    font-size: 15px;
+    outline: none;
+}
+button:disabled {
+    opacity: 0.4;
+    cursor: default;
+}
+button:hover:not(.outline) {
+    filter: brightness(110%);
+}
+.primary {
+    background: var(--primary-color);
+    color: var(--on-primary);
+}
+.secondary {
+    border: 2px solid var(--secondary-color);
+}
+.secondary,
+.secondary:hover,
+.outline.secondary:hover {
+    background: var(--secondary-color);
+    color: var(--on-primary);
+}
+.outline {
+    background: var(--background);
+    color: var(--on-background);
+}
+.outline:hover {
+    background: var(--primary-color);
+    color: var(--on-primary);
+}
+.text-box {
+    width: 40%;
+    text-align: justify;
+    background: rgb(0 0 0 / 50%);
+    color: var(--on-primary);
+    border-radius: 10px;
+    padding: 30px;
+}
+p {
+    margin: 0;
+    line-height: 25px;
 }
