--- a/style.css
+++ b/style.css
@@ -170,3 +170,75 @@ p {
     margin: 0;
     line-height: 25px;
 }
+i {
+    font-size: 100px;
+    margin-right: 50px;
+    cursor: pointer;
+    color: var(--primary-variant);
+}
+i:hover {
+    color: var(--on-background);
+}
+.theme-wrapper {
+    display: flex;
+    align-items: center;
+    z-index: 200;
+    position: fixed;
+    right: 25px;
+    top: 20px;
+}
+.theme-wrapper span {
+    margin-right: 5px;
+    font-size: 1rem;
+}
+.fa-sun {
+    font-size: 30px;
+    margin-right: 5px;
+}
+.toggle-text {
+    position: relative;
+    top: -4px;
+    right: 5px;
+    color: var(--on-background);
+}
+.theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+}
+.theme-switch input {
+    display: none;
+}
+.slider {
+    background: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: 0.4s;
+}
+.slider::before {
+    background: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: 0.4s;
+    width: 26px;
+}
+input:checked + .slider {
+    background: var(--primary-variant);
+}
+input:checked + .slider::before {
+    transform: translateX(26px);
+}
+.slider.round {
+    border-radius: 34px;
+}
+.slider.round::before {
+    border-radius: 50%;
+}
